Changes to fix problems with parsing annotations within model files, bigint arguments to loop invariants, and numerous items suggested by FindBugs